--- a/books/american.html
+++ b/books/american.html
@@ -31,7 +31,7 @@ title: American Coffee Table Book
             <div class="row">
               <div class="col-12 col-lg-4" data-aos="fade-up">
                 <div class="meta__image">
-                  <img src="{{ '/assets/img/american/3.png' | relative_url }}" alt="">
+                  <img src="{{ '/assets/img/american/american-coffee-table-book-3' | relative_url }}" alt="">
                 </div>
               </div>
               <div class="col-12 col-lg-8">
@@ -109,7 +109,7 @@ title: American Coffee Table Book
                       </li>
                     </ul>
                   </div>
-                  <img src="{{ '/assets/img/picture/single-project/2.jpg' | relative_url }}" width="459" height="642" alt="">
+                  <img src="{{ '/assets/img/american/american-coffee-table-book-3.jpg' | relative_url }}" width="459" height="642" alt="">
                 </div>
               </div>
             </div>
@@ -118,12 +118,12 @@ title: American Coffee Table Book
             <div class="row">
               <div class="col-12 col-md-6">
                 <div class="project-other__image" data-aos="fade-up">
-                  <img src="{{ '/assets/img/picture/single-project/1.jpg' | relative_url }}" alt="">
+                  <img src="{{ '/assets/img/american/american-coffee-table-book-1.jpg' | relative_url }}" alt="">
                 </div>
               </div>
               <div class="col-12 col-md-6">
                 <div class="project-other__image project-other__image--small" data-aos="fade-up">
-                  <img src="{{ '/assets/img/picture/single-project/4.jpg' | relative_url }}" alt="">
+                  <img src="{{ '/assets/img/american/american-coffee-table-book-4.jpg' | relative_url }}" alt="">
                   <div class="project-other__text" data-aos="fade-up">Featuring three-sided edge-printing, American Coffee Table Book is simply the most beautiful way to celebrate America... on your coffee table.<br><br>MADE FOR AMERICANS</div>
                 </div>
               </div>
