--- a/books/american.html
+++ b/books/american.html
@@ -109,7 +109,7 @@ title: American Coffee Table Book
                       </li>
                     </ul>
                   </div>
-                  <img src="{{ '/assets/img/american/american-coffee-table-book-3.jpg' | relative_url }}" width="459" height="642" alt="">
+                  <img src="{{ '/assets/img/american/american-coffee-table-book-3.png' | relative_url }}" width="459" height="642" alt="">
                 </div>
               </div>
             </div>
