--- a/books/american.html
+++ b/books/american.html
@@ -31,7 +31,7 @@ title: American Coffee Table Book
             <div class="row">
               <div class="col-12 col-lg-4" data-aos="fade-up">
                 <div class="meta__image">
-                  <img src="{{ '/assets/img/american/american-coffee-table-book-3' | relative_url }}" alt="">
+                  <img src="{{ '/assets/img/american/american-coffee-table-book-3.png' | relative_url }}" alt="">
                 </div>
               </div>
               <div class="col-12 col-lg-8">
@@ -109,7 +109,7 @@ title: American Coffee Table Book
                       </li>
                     </ul>
                   </div>
-                  <img src="{{ '/assets/img/american/american-coffee-table-book-3.png' | relative_url }}" width="459" height="642" alt="">
+                  <img src="{{ '/assets/img/american/american-coffee-table-book-2.jpg' | relative_url }}" width="459" height="642" alt="">
                 </div>
               </div>
             </div>
