--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ sitemap: true
 
 
               <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
-                TABLE books pro is an independent publisher of unique table books, chapbooks, and more. Our catalog of titles includes American Coffee Table Book and Bitcoin Coffee Table Book.
+                {{ site.description }}
               </div>
             </div>
           </div>
