--- a/about.html
+++ b/about.html
@@ -9,9 +9,8 @@ title: About
           <div class="row g-0">
             <header class="modern-hero__header col-6 col-md-9 order-last align-self-end">
               <h1 class="modern-hero__title">
-                <span>Design</span>
-                <span>& Engine</span>
-                <span>—Erigng</span>
+                <span>Books Imbued</span>
+                <span>With Meaning</span>
               </h1>
             </header>
             <div class="modern-hero__content col-6 col-md-3">
@@ -27,14 +26,14 @@ title: About
                   </svg>
                 </span>
               </a>
-              <a class="modern-hero__more arrow-link" href="about-us.html">
+              <!--<a class="modern-hero__more arrow-link" href="about-us.html">
                 <span class="arrow-link__text">About us</span>
                 <span class="arrow-link__icon">
                   <svg width="75" height="75">
                     <use xlink:href="#link-arrow"></use>
                   </svg>
                 </span>
-              </a>
+              </a>-->
             </div>
           </div>
         </div>
@@ -43,11 +42,11 @@ title: About
         <div class="about-section__container container container--size-large">
           <div class="row g-0">
             <div class="about-section__main col-12 col-md-4 order-1">
-              <h2 class="about-section__title" data-aos="fade-up">About us</h2>
+              <h2 class="about-section__title" data-aos="fade-up">About Us</h2>
               <div class="about-section__wrapper">
-                <div class="about-section__text" data-aos="fade-up">Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience. business calls deliver a successful framework for both you and</div>
-                <a class="about-section__more arrow-link" href="services.html" data-aos="fade-up">
-                  <span class="arrow-link__text">Services</span>
+                <div class="about-section__text" data-aos="fade-up">{{ site.description }}</div>
+                <a class="about-section__more arrow-link" href="/books/" data-aos="fade-up">
+                  <span class="arrow-link__text">See The Books</span>
                   <span class="arrow-link__icon">
                     <svg width="75" height="75">
                       <use xlink:href="#link-arrow"></use>
@@ -64,16 +63,10 @@ title: About
             <div class="about-section__steps col-12 col-md-8 order-md-last">
               <ul class="about-section__list" data-aos="fade-up">
                 <li class="about-section__item">
-                  <a href="service-detail.html">01 Web Deveopment</a>
+                  <a href="/books/bitcoin/">BITCOIN COFFEE TABLE BOOK</a>
                 </li>
                 <li class="about-section__item">
-                  <a href="service-detail.html">02 Brand Design</a>
-                </li>
-                <li class="about-section__item">
-                  <a href="service-detail.html">03 WordPress</a>
-                </li>
-                <li class="about-section__item">
-                  <a href="service-detail.html">04 Photography</a>
+                  <a href="/books/american/">AMERICAN COFFEE TABLE BOOK</a>
                 </li>
               </ul>
             </div>
@@ -83,7 +76,7 @@ title: About
       <section class="carousel-section carousel-section--separator carousel-section--pb-large">
         <div class="carousel-section__container container container--size-large">
           <header class="carousel-section__header row align-items-end align-items-md-center">
-            <h2 class="carousel-section__title col-8 col-md-10" data-aos="fade-up">Latest works</h2>
+            <h2 class="carousel-section__title col-8 col-md-10" data-aos="fade-up">Latest Books</h2>
             <div class="carousel-section__nav col-12 col-md-2 order-last order-md-0" data-aos="fade-up">
               <button class="nav-btn nav-btn--prev" data-target=".__js_carousel-latest-projects" type="button">
                 <svg width="50" height="16">
@@ -155,7 +148,7 @@ title: About
           </div>
         </div>
       </section>
-      <section class="about-video-section about-video-section--pb-0">
+      <!--<section class="about-video-section about-video-section--pb-0">
         <div class="about-video-section__container container container--size-large">
           <div class="row">
             <div class="about-video-section__main col-12 col-md">
@@ -237,7 +230,6 @@ title: About
                 <div class="member-card__info">
                   <div class="member-card__title">Sam Flex</div>
                   <div class="member-card__post">Director</div>
-                  <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
@@ -275,7 +267,6 @@ title: About
                 <div class="member-card__info">
                   <div class="member-card__title">Kate Larson</div>
                   <div class="member-card__post">Manager</div>
-                  <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
@@ -313,7 +304,6 @@ title: About
                 <div class="member-card__info">
                   <div class="member-card__title">Bobby Fish</div>
                   <div class="member-card__post">Designer</div>
-                  <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
@@ -351,7 +341,6 @@ title: About
                 <div class="member-card__info">
                   <div class="member-card__title">Amanda James</div>
                   <div class="member-card__post">Programmer</div>
-                  <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
