--- a/contact.html
+++ b/contact.html
@@ -10,25 +10,25 @@ sitemap: true
             <div class="row">
               <div class="contact-section__main col-12 col-md">
                 <h2 class="contact-section__title" data-aos="fade-up">Contact</h2>
-                <address class="contact-section__address" data-aos="fade-up">269 King Str, 05th Floor, Utral Hosue Building, Melbourne, VIC 3000, Australia.</address>
+                <address class="contact-section__address" data-aos="fade-up">Wilton, Connecticut</address>
                 <div class="contact-section__link" data-aos="fade-up">
-                  <a href="tel:+34255216021">+3 (425) 521 60 21</a>
-                </div>
-                <div class="contact-section__link" data-aos="fade-up">
-                  <a href="mailto:info@centrix.com">info@centrix.com</a>
+                  <a href="mailto:tablebookspro@protonmail.com">tablebookspro@protonmail.com</a>
                 </div>
                 <ul class="contact-section__social" data-aos="fade-up">
                   <li>
-                    <a href="#">Facebook</a>
+                    <a href="https://www.tiktok.com/@tablebookspro">Tik Tok</a>
                   </li>
                   <li>
-                    <a href="#">Twitter</a>
+                    <a href="https://www.facebook.com/tablebookspro/">Facebook</a>
                   </li>
                   <li>
-                    <a href="#">Instagram</a>
+                    <a href="https://www.instagram.com/tablebookspro/">Instagram</a>
                   </li>
                   <li>
-                    <a href="#">LinkedIn</a>
+                    <a href="https://x.com/TableBookspro">X.com</a>
+                  </li>
+                  <li>
+                    <a href="https://tablebookspro.substack.com/">Substack</a>
                   </li>
                 </ul>
               </div>
@@ -84,8 +84,4 @@ sitemap: true
               </div>
             </div>
           </div>
-          <div class="contact-section__map" id="map" data-aos="fade-up">
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A351063e7db352f0133fe8dca1724bd5b8208d2a14e4ca511a12b61acfa0179d0&amp;source=constructor"></iframe>
-          </div>
         </section>
-      </article>
