--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ title: About
               </h1>
             </header>
             <div class="modern-hero__content col-6 col-md-3">
-              <a class="modern-hero__btn round-button round-button--mobile-small" href="#">
+              <!--<a class="modern-hero__btn round-button round-button--mobile-small" href="#">
                 <span class="round-button__circle">
                   <svg width="251" height="251">
                     <use xlink:href="#circle-text"></use>
@@ -26,7 +26,7 @@ title: About
                   </svg>
                 </span>
               </a>
-              <!--<a class="modern-hero__more arrow-link" href="about-us.html">
+              <a class="modern-hero__more arrow-link" href="about-us.html">
                 <span class="arrow-link__text">About us</span>
                 <span class="arrow-link__icon">
                   <svg width="75" height="75">
