--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ sitemap: true
                 <div class="col-12 col-xxl-3" data-aos="fade-right" data-aos-delay="0">
                   <h2 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;"></span>
-                    <span style="display: inline-block; width: 50%;">Better</span>
-                    <span style="display: inline-block; width: 50%;">Books</span>
-                    <span style="display: inline-block; width: 50%;">For</span>
+                    <span style="display: inline-block; width: 50%;">Own</span>
                     <span style="display: inline-block; width: 50%;">The</span>
-                    <span style="display: inline-block; width: 50%;">People</span>
+                    <span style="display: inline-block; width: 50%;">Edge</span>
+                    <span style="display: inline-block; width: 50%;"></span>
+                    <span style="display: inline-block; width: 50%;"></span>
                   </h2>
                 </div>
               </div>
