--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ sitemap: true
           <section class="creative-hero">
             <div class="creative-hero__container">
               <div class="services-section__text">
-                <div class="col-12 col-xxl-3" data-aos="fade-right" data-aos-delay="0">
+                <div class="col-12 col-xxl-6" data-aos="fade-right" data-aos-delay="0">
                   <h2 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;">Own</span>
@@ -21,8 +21,8 @@ sitemap: true
                   </h2>
                 </div>
               </div>
-                <div class="creative-hero__image">
-                  <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" width="800" height="800" alt="">
+                <div class="creative-hero__image col-xxl-6">
+                  <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" alt="">
                 </div>
             </div>
 
