--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ sitemap: true
                 </div>
               </div>
                 <div class="creative-hero__image col-9 col-xxl-6">
-                  <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" alt="">
+                  <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" height="500" alt="">
                 </div>
             </div>
 
