--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ sitemap: true
           <section class="creative-hero">
             <div class="creative-hero__container">
               <div class="services-section__text">
-                <div class="col-3 col-xxl-6" data-aos="fade-right" data-aos-delay="0">
+                <div class="col-6 col-xxl-6" data-aos="fade-right" data-aos-delay="0">
                   <h2 class="creative-hero__title">
                     <span style="display: inline-block; width: 50%;"></span>
                     <span style="display: inline-block; width: 50%;">Own</span>
@@ -21,8 +21,8 @@ sitemap: true
                   </h2>
                 </div>
               </div>
-                <div class="creative-hero__image col-9 col-xxl-6">
-                  <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" height="500" alt="">
+                <div class="creative-hero__image col-6 col-xxl-6">
+                  <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" style="height: 450px; width: 450px;" alt="">
                 </div>
             </div>
 
