--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@ sitemap: true
       <div class="leftward-wrapper__container container container--size-large">
         <main>
           <section class="creative-hero">
-            <div class="creative-hero__container">
-              <div class="services-section__text">
-                <div class="col-6 col-xxl-6" data-aos="fade-right" data-aos-delay="0">
-                  <h2 class="creative-hero__title">
-                    <span style="display: inline-block; width: 50%;"></span>
-                    <span style="display: inline-block; width: 50%;">Own</span>
-                    <span style="display: inline-block; width: 50%;">The</span>
-                    <span style="display: inline-block; width: 50%;">Edge</span>
-                    <span style="display: inline-block; width: 50%;"></span>
-                    <span style="display: inline-block; width: 50%;"></span>
-                  </h2>
-                </div>
-              </div>
-                <div class="creative-hero__image col-6 col-xxl-6">
-                  <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" style="height: 450px; width: 450px;" alt="">
-                </div>
-            </div>
+            <div class="creative-hero__container container">
+  <div class="row align-items-center">
+    <!-- Text Section -->
+    <div class="col-12 col-md-6" data-aos="fade-right" data-aos-delay="0">
+      <div class="services-section__text">
+        <h2 class="creative-hero__title">
+          <span style="display: inline-block; width: 50%;"></span>
+          <span style="display: inline-block; width: 50%;">Own</span>
+          <span style="display: inline-block; width: 50%;">The</span>
+          <span style="display: inline-block; width: 50%;">Edge</span>
+          <span style="display: inline-block; width: 50%;"></span>
+          <span style="display: inline-block; width: 50%;"></span>
+        </h2>
+      </div>
+    </div>
+    <!-- Image Section -->
+    <div class="col-12 col-md-6">
+      <div class="creative-hero__image">
+        <img
+          src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
+          style="height: 450px; width: 450px;"
+          alt="Table Book Logo"
+        >
+      </div>
+    </div>
+  </div>
+</div>
 
           <div class="single-project__hero row">
             <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
