--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@ sitemap: true
             <div class="creative-hero__container container">
   <div class="row align-items-center">
     <!-- Text Section -->
-    <div class="col-12 col-md-6" data-aos="fade-right" data-aos-delay="0">
+    <div class="col-3 col-md-6" data-aos="fade-right" data-aos-delay="0">
       <div class="services-section__text">
         <h2 class="creative-hero__title">
-          <span style="display: inline-block; width: 50%;"></span>
           <span style="display: inline-block; width: 50%;">Own</span>
           <span style="display: inline-block; width: 50%;">The</span>
           <span style="display: inline-block; width: 50%;">Edge</span>
-          <span style="display: inline-block; width: 50%;"></span>
           <span style="display: inline-block; width: 50%;"></span>
         </h2>
       </div>
     </div>
     <!-- Image Section -->
-    <div class="col-12 col-md-6">
+    <div class="col-3 col-md-6">
       <div class="creative-hero__image">
         <img
           src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
           style="height: 300px; width: 300px;"
           alt="Table Book Logo"
         >
+      </div>
+    </div>
+    <div class="col-6 col-md-6">
+      <div class="creative-hero__image">
       </div>
     </div>
   </div>
