--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@ sitemap: true
         <main>
           <section class="creative-hero">
             <div class="creative-hero__container container">
-  <div class="row align-items-center">
+ <div class="container">
+  <div class="row justify-content-center">
     <!-- Text Section -->
-    <div class="col-3 col-md-6" data-aos="fade-right" data-aos-delay="0">
+    <div class="col-12 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
       <div class="services-section__text">
         <h2 class="creative-hero__title">
           <span style="display: inline-block; width: 50%;"></span>
@@ -22,20 +23,18 @@ sitemap: true
       </div>
     </div>
     <!-- Image Section -->
-    <div class="col-3 col-md-6">
+    <div class="col-12 col-md-4 text-md-left">
       <div class="creative-hero__image">
         <img
           src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-          style="height: 300px; width: 300px;"
+          class="img-fluid"
+          style="max-height: 300px;"
           alt="Table Book Logo"
         >
       </div>
     </div>
-    <div class="col-6 col-md-6">
-      <div class="creative-hero__image">
-      </div>
-    </div>
   </div>
+</div>
 </div>
 
           <div class="single-project__hero row">
