--- a/index.html
+++ b/index.html
@@ -3,124 +3,63 @@ layout: default
 title: TABLE books pro
 sitemap: true
 ---
-
-    <div class="leftward-wrapper">
-      <div class="leftward-wrapper__container container container--size-large">
-        <main>
+<div class="leftward-wrapper">
+  <div class="container container--size-large">
+    <main>
+      <div class="row">
+        <!-- Left Half: Main Content -->
+        <div class="col-12 col-md-6">
           <section class="creative-hero">
-            <div class="creative-hero__container container">
- <div class="container">
-  <div class="row justify-content-center">
-    <!-- Text Section -->
-    <div class="col-6 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
-      <div class="services-section__text">
-        <h2 class="creative-hero__title">
-          <span style="display: inline-block; width: 50%;"></span>
-          <span style="display: inline-block; width: 50%;">Own</span>
-          <span style="display: inline-block; width: 50%;">The</span>
-          <span style="display: inline-block; width: 50%;">Edge</span>
-        </h2>
-      </div>
-    </div>
-    <!-- Image Section -->
-    <div class="col-6 col-md-4 text-md-left">
-      <div class="creative-hero__image">
-        <img
-          src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-          class="img-fluid"
-          style="max-height: 300px;"
-          alt="Table Book Logo"
-        >
-      </div>
-    </div>
-  </div>
-</div>
-</div>
+            <div class="creative-hero__container">
+              <div class="row justify-content-center">
+                <!-- Text Section -->
+                <div class="col-6 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
+                  <div class="services-section__text">
+                    <h2 class="creative-hero__title">
+                      <span style="display: inline-block; width: 50%;"></span>
+                      <span style="display: inline-block; width: 50%;">Own</span>
+                      <span style="display: inline-block; width: 50%;">The</span>
+                      <span style="display: inline-block; width: 50%;">Edge</span>
+                    </h2>
+                  </div>
+                </div>
+                <!-- Image Section -->
+                <div class="col-6 col-md-4 text-md-left">
+                  <div class="creative-hero__image">
+                    <img
+                      src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
+                      class="img-fluid"
+                      style="max-height: 300px;"
+                      alt="Table Book Logo"
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 
           <div class="single-project__hero row">
-            <div class="single-project__hero-main col-12 col-md-6 col-lg-5 col-xxl-6 order-md-first">
-
-
+            <div class="single-project__hero-main col-12 order-md-first">
               <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
                 {{ site.description }}
               </div>
             </div>
           </div>
-          <!--<section class="services-section">
-            <div class="services-section__container services-section__container--small">
-              <h2 class="services-section__title" data-aos="fade-up">Services</h2>
-              <div class="services-section__main">
-                <div class="services-section__image" data-aos="fade-up">
-                  <img src="{{ '/assets/img/picture/creative/services.jpg' | relative_url }}" width="823" height="417" alt="">
+
+          <section class="plans-section">
+            <div class="plans-section__container" style="display: flex; flex-wrap: wrap; width: 100%; max-width: 1200px; margin: 0 auto;">
+              <h2 class="services-section__title" data-aos="fade-up">Our Books</h2>
+              <div class="row" style="width: 100%;">
+                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+                  <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
                 </div>
-                <div class="services-section__menu">
-                  <ul class="services-section__list">
-                    <li class="services-section__item" data-aos="fade-up">
-                      <a class="services-section__link" href="service-detail.html">Web development<span>
-                          <svg width="24" height="23">
-                            <use xlink:href="#link-arrow2"></use>
-                          </svg>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="services-section__item" data-aos="fade-up">
-                      <a class="services-section__link" href="service-detail.html">Marketing<span>
-                          <svg width="24" height="23">
-                            <use xlink:href="#link-arrow2"></use>
-                          </svg>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="services-section__item" data-aos="fade-up">
-                      <a class="services-section__link" href="service-detail.html">Graphic design<span>
-                          <svg width="24" height="23">
-                            <use xlink:href="#link-arrow2"></use>
-                          </svg>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="services-section__item" data-aos="fade-up">
-                      <a class="services-section__link" href="service-detail.html">Photography<span>
-                          <svg width="24" height="23">
-                            <use xlink:href="#link-arrow2"></use>
-                          </svg>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="services-section__item" data-aos="fade-up">
-                      <a class="services-section__link" href="service-detail.html">Illustrations<span>
-                          <svg width="24" height="23">
-                            <use xlink:href="#link-arrow2"></use>
-                          </svg>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="services-section__item" data-aos="fade-up">
-                      <a class="services-section__link" href="service-detail.html">Product design<span>
-                          <svg width="24" height="23">
-                            <use xlink:href="#link-arrow2"></use>
-                          </svg>
-                        </span>
-                      </a>
-                    </li>
-                  </ul>
+                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+                  <a href="{{ 'books/bitcoin' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
                 </div>
               </div>
             </div>
-          </section>-->
-<section class="plans-section">
-  <div class="plans-section__container" style="display: flex; flex-wrap: wrap; width: 100%; max-width: 1200px; margin: 0 auto;">
-    <h2 class="services-section__title" data-aos="fade-up">Our Books</h2>
-    <div class="row" style="width: 100%;">
-      <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
-        <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
-      </div>
-      <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
-        <a href="{{ 'books/bitcoin' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
-      </div>
-    </div>
-  </div>
-</section>
+          </section>
+
           <section class="start-project">
             <div class="start-project__container start-project__container--small">
               <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Subscribe</h2>
@@ -175,6 +114,10 @@ sitemap: true
               </div>
             </div>
           </section>
-        </main>
         </div>
-        </div>
+        <!-- Right Half: Blank Column -->
+        <div class="col-12 col-md-6"></div>
+      </div>
+    </main>
+  </div>
+</div>
