--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@ sitemap: true
         <!-- Left Half: Main Content -->
         <div class="col-12 col-md-6">
           <section class="creative-hero">
-            <div class="creative-hero__container">
-              <div class="row justify-content-center">
-                <!-- Text Section -->
-                <div class="col-6 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
-                  <div class="services-section__text">
-                    <h2 class="creative-hero__title">
-                      <span style="display: inline-block; width: 50%;"></span>
-                      <span style="display: inline-block; width: 50%;">Own</span>
-                      <span style="display: inline-block; width: 50%;">The</span>
-                      <span style="display: inline-block; width: 50%;">Edge</span>
-                    </h2>
-                  </div>
-                </div>
-                <!-- Image Section -->
-                <div class="col-6 col-md-4 text-md-left">
-                  <div class="creative-hero__image">
-                    <img
-                      src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-                      class="img-fluid"
-                      style="max-height: 300px;"
-                      alt="Table Book Logo"
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
+  <div class="creative-hero__container">
+    <div class="row justify-content-center">
+      <!-- Text Section -->
+      <div class="col-6 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
+        <div class="services-section__text">
+          <h2 class="creative-hero__title">
+            <span style="display: inline-block; width: 50%;"></span>
+            <span style="display: inline-block; width: 50%;">Own</span>
+            <span style="display: inline-block; width: 50%;">The</span>
+            <span style="display: inline-block; width: 50%;">Edge</span>
+          </h2>
+        </div>
+      </div>
+      <!-- Image Section -->
+      <div class="col-6 col-md-4 text-md-left">
+        <div class="creative-hero__image">
+          <img
+            src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
+            class="img-fluid"
+            style="width: 100%; max-height: 400px;"
+            alt="Table Book Logo"
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
           <div class="single-project__hero row">
             <div class="single-project__hero-main col-12 order-md-first">
