--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ sitemap: true
       <div class="row">
         <!-- Left Half: Main Content -->
         <div class="col-12 col-md-6">
-          <section class="creative-hero">
+<section class="creative-hero">
   <div class="creative-hero__container">
     <div class="row justify-content-center">
       <!-- Text Section -->
@@ -28,8 +28,7 @@ sitemap: true
         <div class="creative-hero__image">
           <img
             src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-            class="img-fluid"
-            style="width: 100%; max-height: 400px;"
+            class="img-fluid hero-logo"
             alt="Table Book Logo"
           >
         </div>
