--- a/index.html
+++ b/index.html
@@ -9,50 +9,52 @@ sitemap: true
       <div class="row">
         <!-- Left Half: Main Content -->
         <div class="col-12 col-md-6">
-<section class="creative-hero">
-  <div class="creative-hero__container">
-    <div class="row justify-content-center">
-      <!-- Text Section -->
-      <div class="col-6 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
-        <div class="services-section__text">
-          <h2 class="creative-hero__title">
-            <span style="display: inline-block; width: 50%;"></span>
-            <span style="display: inline-block; width: 50%;">Own</span>
-            <span style="display: inline-block; width: 50%;">The</span>
-            <span style="display: inline-block; width: 50%;">Edge</span>
-          </h2>
-        </div>
-      </div>
-      <!-- Image Section -->
-      <div class="col-6 col-md-4 text-md-left">
-        <div class="creative-hero__image">
-          <img
-            src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-            class="img-fluid hero-logo"
-            alt="Table Book Logo"
-          >
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-          <div class="single-project__hero row">
-            <div class="single-project__hero-main col-12 order-md-first">
-              <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
-                {{ site.description }}
+          <section class="creative-hero">
+            <div class="creative-hero__container">
+              <div class="row">
+                <!-- Text Section -->
+                <div class="col-6 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
+                  <div class="services-section__text">
+                    <h2 class="creative-hero__title">
+                      <span style="display: inline-block; width: 50%;"></span>
+                      <span style="display: inline-block; width: 50%;">Own</span>
+                      <span style="display: inline-block; width: 50%;">The</span>
+                      <span style="display: inline-block; width: 50%;">Edge</span>
+                    </h2>
+                  </div>
+                </div>
+                <!-- Image Section -->
+                <div class="col-6 col-md-4 text-md-left">
+                  <div class="creative-hero__image">
+                    <img
+                      src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
+                      class="img-fluid hero-logo"
+                      alt="Table Book Logo"
+                    >
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
+          </section>
+
+          <section class="single-project__hero">
+            <div class="row">
+              <div class="col-12">
+                <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
+                  {{ site.description }}
+                </div>
+              </div>
+            </div>
+          </section>
 
           <section class="plans-section">
-            <div class="plans-section__container" style="display: flex; flex-wrap: wrap; width: 100%; max-width: 1200px; margin: 0 auto;">
+            <div class="plans-section__container">
               <h2 class="services-section__title" data-aos="fade-up">Our Books</h2>
-              <div class="row" style="width: 100%;">
-                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+              <div class="row">
+                <div class="plans-section__item card-price col-12" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: left center; background-repeat: no-repeat;">
                   <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
                 </div>
-                <div class="plans-section__item card-price col-12 col-lg-6 col-xl-6" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: center; background-repeat: no-repeat;">
+                <div class="plans-section__item card-price col-12" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: left center; background-repeat: no-repeat;">
                   <a href="{{ 'books/bitcoin' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
                 </div>
               </div>
@@ -63,17 +65,17 @@ sitemap: true
             <div class="start-project__container start-project__container--small">
               <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Subscribe</h2>
               <div class="start-project__grid">
-                <div class="start-project__discuss discuss-project discuss-project--no-padding">
+                <div class="discuss-project discuss-project--no-padding">
                   <div class="discuss-project__wrapper" data-aos="fade-up">
                     <form action="#" method="post">
-                      <div class="row justify-content-between gx-0">
-                        <div class="discuss-project__field-wrapper col-12 col-md-6" data-aos="fade-up">
+                      <div class="row">
+                        <div class="discuss-project__field-wrapper col-12" data-aos="fade-up">
                           <label class="discuss-project__field field">
                             <input type="text" name="name">
                             <span class="field__hint">Name</span>
                           </label>
                         </div>
-                        <div class="discuss-project__field-wrapper col-12 col-md-6" data-aos="fade-up">
+                        <div class="discuss-project__field-wrapper col-12" data-aos="fade-up">
                           <label class="discuss-project__field field">
                             <input type="email" name="email">
                             <span class="field__hint">Email</span>
