--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ sitemap: true
       <div class="row">
         <!-- Left Half: Main Content -->
 
-          <section class="creative-hero">
+          <section class="creative-hero col-md-4">
             <div class="creative-hero__container">
               <div class="row">
                 <!-- Text Section -->
@@ -36,6 +36,7 @@ sitemap: true
               </div>
             </div>
           </section>
+          <div class="col-md-8" style="height: 1px;"></div>
 
           <section class="single-project__hero">
             <div class="row">
