--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ sitemap: true
             <div class="creative-hero__container">
               <div class="row">
                 <!-- Text Section -->
-                <div class="col-6 col-md-4 text-md-left" data-aos="fade-right" data-aos-delay="0">
+                <div class="text-md-left" data-aos="fade-right" data-aos-delay="0">
                   <div class="services-section__text">
                     <h2 class="creative-hero__title">
                       <span style="display: inline-block; width: 50%;"></span>
