--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@ sitemap: true
   <div class="container container--size-large">
     <main>
       <div class="row">
-        <!-- Left Half: Main Content -->
-
           <section class="creative-hero col-md-4">
             <div class="creative-hero__container">
               <div class="row">
@@ -16,10 +14,9 @@ sitemap: true
                 <div class="text-md-left" data-aos="fade-right" data-aos-delay="0">
                   <div class="services-section__text">
                     <h2 class="creative-hero__title">
-                      <span style="display: inline-block; width: 50%;"></span>
-                      <span style="display: inline-block; width: 50%;">Own</span>
-                      <span style="display: inline-block; width: 50%;">The</span>
-                      <span style="display: inline-block; width: 50%;">Edge</span>
+                      <span style="display: inline-block; width: 50%;">OWN</span>
+                      <span style="display: inline-block; width: 50%;">THE</span>
+                      <span style="display: inline-block; width: 50%;">EDGE</span>
                     </h2>
                   </div>
                 </div>
@@ -35,17 +32,18 @@ sitemap: true
                 </div>
               </div>
             </div>
-          </section>
-          <div class="col-md-8" style="height: 1px;"></div>
-
-          <section class="single-project__hero">
-            <div class="row">
+                        <div class="row">
               <div class="col-12">
                 <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
                   {{ site.description }}
                 </div>
               </div>
             </div>
+          </section>
+          <div class="col-md-8" style="height: 1px;"></div>
+
+          <section class="single-project__hero">
+
           </section>
 
           <section class="plans-section">
