--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ sitemap: true
                   </div>
                 </div>
                 <!-- Image Section -->
-                <div class="col-6 col-md-4 text-md-left">
+                <div class="">
                   <div class="creative-hero__image">
                     <img
                       src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
@@ -32,8 +32,8 @@ sitemap: true
                 </div>
               </div>
             </div>
-                        <div class="row">
-              <div class="col-12">
+              <div class="row">
+              <div class="">
                 <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
                   {{ site.description }}
                 </div>
