--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ sitemap: true
                   </div>
                 </div>
                 <!-- Image Section -->
-                <div class="">
+                <div class="text-md-left">
                   <div class="creative-hero__image">
                     <img
                       src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
