--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ sitemap: true
                 </div>
                 <!-- Image Section -->
                 <div class="col-md-6">
-                  <div class="creative-hero__image">
+
                     <img
                       src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-                      class="img-fluid hero-logo"
+                      class="img-fluid"
                       alt="Table Book Logo"
                     >
-                  </div>
+
                 </div>
               </div>
             </div>
