--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@ sitemap: true
                 </div>
                 <!-- Image Section -->
                 <div class="col-md-6">
-
-                    <img
-                      src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-                      class="img-fluid"
-                      alt="Table Book Logo"
-                    >
-
+                    <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" class="img-fluid" alt="Table Book Logo">
                 </div>
               </div>
             </div>
