--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ sitemap: true
             <div class="creative-hero__container">
               <div class="row">
                 <!-- Text Section -->
-                <div class="col-md-6" data-aos="fade-right" data-aos-delay="0">
+                <div class="col-6" data-aos="fade-right" data-aos-delay="0">
                   <div class="services-section__text">
                     <h2 class="creative-hero__title">
                       <span style="display: inline-block; width: 50%;">OWN</span>
@@ -21,7 +21,7 @@ sitemap: true
                   </div>
                 </div>
                 <!-- Image Section -->
-                <div class="col-md-6">
+                <div class="col-6">
                     <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" style="max-width: 100%; height: auto;" class="img-fluid" alt="Table Book Logo">
                 </div>
               </div>
