--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@ sitemap: true
                 <div class="col-6">
                     <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" style="max-width: 100%; height: auto;" class="img-fluid" alt="Table Book Logo">
                 </div>
-
+              <div class="row">
+                <div class="col-12">
                 <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
                   {{ site.description }}
+                </div>
+                </div>
                 </div>
               </div>
             </div>
