--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ sitemap: true
                 </div>
               <div class="row">
                 <div class="col-12">
-                <div class="single-project__hero-text" data-aos="fade-up" data-aos-delay="50">
+                <div class="single-project__hero-text" style="max-width: 100%; !important" data-aos="fade-up" data-aos-delay="50">
                   {{ site.description }}
                 </div>
                 </div>
