--- a/index.html
+++ b/index.html
@@ -3,116 +3,124 @@ layout: default
 title: TABLE books pro
 sitemap: true
 ---
+
 <div class="leftward-wrapper">
   <div class="container container--size-large">
     <main>
       <div class="row">
-          <section class="creative-hero col-md-4">
-            <div class="creative-hero__container">
-              <div class="row">
-                <!-- Text Section -->
-                <div class="col-6" data-aos="fade-right" data-aos-delay="0">
-                  <div class="services-section__text">
-                    <h2 class="creative-hero__title">
-                      <span style="display: inline-block; width: 50%;">OWN</span>
-                      <span style="display: inline-block; width: 50%;">THE</span>
-                      <span style="display: inline-block; width: 50%;">EDGE</span>
-                    </h2>
-                  </div>
+        <section class="creative-hero col-md-4">
+          <div class="creative-hero__container">
+            <div class="row">
+              <!-- Text Section -->
+              <div class="col-6" data-aos="fade-right" data-aos-delay="0">
+                <div class="services-section__text">
+                  <h2 class="creative-hero__title">
+                    <span style="display: inline-block; width: 50%;">OWN</span>
+                    <span style="display: inline-block; width: 50%;">THE</span>
+                    <span style="display: inline-block; width: 50%;">EDGE</span>
+                  </h2>
                 </div>
-                <!-- Image Section -->
-                <div class="col-6">
-                    <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" style="max-width: 100%; height: auto;" class="img-fluid" alt="Table Book Logo">
-                </div>
+              </div>
+              <!-- Image Section -->
+              <div class="col-6">
+                <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
+                  style="max-width: 100%; height: auto;" class="img-fluid" alt="Table Book Logo">
+              </div>
               <div class="row">
                 <div class="col-12">
-                <div class="single-project__hero-text" style="max-width: 100%; text-align: justify;" data-aos="fade-up" data-aos-delay="50">
-                  {{ site.description }}
-                </div>
-                </div>
-                </div>
-              </div>
-            </div>
-          </section>
-          <div class="col-md-8" style="height: 1px;"></div>
-          </div>
-
-          <section class="single-project__hero">
-
-          </section>
-
-          <section class="plans-section">
-            <div class="plans-section__container">
-              <h2 class="services-section__title" data-aos="fade-up">Our Books</h2>
-              <div class="row">
-                <div class="plans-section__item card-price col-12" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: left center; background-repeat: no-repeat;">
-                  <a href="{{ 'books/american' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
-                </div>
-                <div class="plans-section__item card-price col-12" data-aos="fade-up" style="min-height: 400px; background-image: url('{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}'); background-size: contain; background-position: left center; background-repeat: no-repeat;">
-                  <a href="{{ 'books/bitcoin' | relative_url }}" style="display: block; width: 100%; height: 100%; text-decoration: none;"></a>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <section class="start-project">
-            <div class="start-project__container start-project__container--small">
-              <h2 class="start-project__title start-project__title--size-small" data-aos="fade-up">Subscribe</h2>
-              <div class="start-project__grid">
-                <div class="discuss-project discuss-project--no-padding">
-                  <div class="discuss-project__wrapper" data-aos="fade-up">
-                    <form action="#" method="post">
-                      <div class="row">
-                        <div class="discuss-project__field-wrapper col-12" data-aos="fade-up">
-                          <label class="discuss-project__field field">
-                            <input type="text" name="name">
-                            <span class="field__hint">Name</span>
-                          </label>
-                        </div>
-                        <div class="discuss-project__field-wrapper col-12" data-aos="fade-up">
-                          <label class="discuss-project__field field">
-                            <input type="email" name="email">
-                            <span class="field__hint">Email</span>
-                          </label>
-                        </div>
-                        <div class="col-12" data-aos="fade-up">
-                          <label class="discuss-project__field discuss-project__field--textarea field">
-                            <textarea name="message" required></textarea>
-                            <span class="field__hint">Message</span>
-                          </label>
-                        </div>
-                        <div class="discuss-project__bottom col-12">
-                          <div class="discuss-project__file file-upload" data-aos="fade-up">
-                            <label class="file-upload__label">
-                              <input class="visually-hidden" type="file">
-                              <span class="file-upload__icon">
-                                <svg width="16" height="16">
-                                  <use xlink:href="#paper-clip"></use>
-                                </svg>
-                              </span>
-                              <span class="file-upload__text">Attach a file</span>
-                            </label>
-                          </div>
-                          <button class="discuss-project__send btn--theme-black btn" type="submit" data-aos="fade-up">
-                            <span class="btn__text">Not Yet</span>
-                            <span class="btn__icon">
-                              <svg width="19" height="19">
-                                <use xlink:href="#link-arrow"></use>
-                              </svg>
-                            </span>
-                          </button>
-                        </div>
-                      </div>
-                    </form>
+                  <div class="single-project__hero-text" style="max-width: 100%; text-align: justify;"
+                    data-aos="fade-up" data-aos-delay="50">
+                    {{ site.description }}
                   </div>
                 </div>
               </div>
             </div>
-          </section>
-        </div>
-        <!-- Right Half: Blank Column -->
-
+          </div>
+        </section>
+        <div class="col-md-8" style="height: 1px;"></div>
       </div>
-    </main>
-  </div>
+
+          <section class="portfolio-section portfolio-section--no-padding">
+            <header class="portfolio-section__header row align-items-end">
+              <div class="col-8 col-xl-6 offset-xl-2">
+                <h2 class="portfolio-section__title">Latest works</h2>
+              </div>
+              <div class="col-4 text-right">
+                <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
+                  <span class="arrow-link__text">View all</span>
+                  <span class="arrow-link__icon">
+                    <svg width="75" height="75">
+                      <use xlink:href="#link-arrow"></use>
+                    </svg>
+                  </span>
+                </a>
+              </div>
+            </header>
+            <ul class="portfolio-section__grid __js_portfolio-section-masonry">
+              <li class="portfolio-section__item __js_masonry-item">
+                <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
+                  <span class="project-preview__image">
+                    <img src="img/picture/common/portfolio-section/1-mobile.jpg" alt="Realistic building">
+                  </span>
+                  <span class="project-preview__bottom">
+                    <span class="project-preview__title">Realistic building</span>
+                    <span class="project-preview__icon">
+                      <svg width="24" height="23">
+                        <use xlink:href="#link-arrow2"></use>
+                      </svg>
+                    </span>
+                  </span>
+                </a>
+              </li>
+              <li class="portfolio-section__item __js_masonry-item">
+                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+                  <span class="project-preview__image">
+                    <img src="img/picture/common/portfolio-section/2.jpg" width="531" height="417" alt="Banana">
+                  </span>
+                  <span class="project-preview__bottom">
+                    <span class="project-preview__title">Banana</span>
+                    <span class="project-preview__icon">
+                      <svg width="24" height="23">
+                        <use xlink:href="#link-arrow2"></use>
+                      </svg>
+                    </span>
+                  </span>
+                </a>
+              </li>
+              <li class="portfolio-section__item __js_masonry-item">
+                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+                  <span class="project-preview__image">
+                    <img src="img/picture/common/portfolio-section/3.jpg" width="531" height="417" alt="Abstract lists">
+                  </span>
+                  <span class="project-preview__bottom">
+                    <span class="project-preview__title">Abstract lists</span>
+                    <span class="project-preview__icon">
+                      <svg width="24" height="23">
+                        <use xlink:href="#link-arrow2"></use>
+                      </svg>
+                    </span>
+                  </span>
+                </a>
+              </li>
+              <li class="portfolio-section__item __js_masonry-item  portfolio-section__item--two-thirds">
+                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+                  <span class="project-preview__image">
+                    <img src="img/picture/common/portfolio-section/4-mobile.jpg" alt="Green onion">
+                  </span>
+                  <span class="project-preview__bottom">
+                    <span class="project-preview__title">Green onion</span>
+                    <span class="project-preview__icon">
+                      <svg width="24" height="23">
+                        <use xlink:href="#link-arrow2"></use>
+                      </svg>
+                    </span>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </section>
+
+</div>
+</main>
+</div>
 </div>
