--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ sitemap: true
               <li class="portfolio-section__item __js_masonry-item">
                 <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
                   <span class="project-preview__image">
-                    <img src="img/picture/common/portfolio-section/1-mobile.jpg" alt="Realistic building">
+                    <img src="{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}" alt="American Coffee Table Book">
                   </span>
                   <span class="project-preview__bottom">
-                    <span class="project-preview__title">Realistic building</span>
+                    <span class="project-preview__title">American Coffee Table Book</span>
                     <span class="project-preview__icon">
                       <svg width="24" height="23">
                         <use xlink:href="#link-arrow2"></use>
