--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@ sitemap: true
               <li class="portfolio-section__item __js_masonry-item">
                 <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                   <span class="project-preview__image">
-                    <img src="img/picture/common/portfolio-section/2.jpg" width="531" height="417" alt="Banana">
+                    <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" width="531" height="417" alt="Bitcoin Coffee Table Book">
                   </span>
                   <span class="project-preview__bottom">
-                    <span class="project-preview__title">Banana</span>
+                    <span class="project-preview__title">Bitcoin Coffee Table Book</span>
                     <span class="project-preview__icon">
                       <svg width="24" height="23">
                         <use xlink:href="#link-arrow2"></use>
