--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ sitemap: true
           <section class="portfolio-section portfolio-section--no-padding">
             <header class="portfolio-section__header row align-items-end">
               <div class="col-8 col-xl-6 offset-xl-2">
-                <h2 class="portfolio-section__title">Latest works</h2>
+                <h2 class="portfolio-section__title">Our Books</h2>
               </div>
               <div class="col-4 text-right">
                 <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
-                  <span class="arrow-link__text">View all</span>
+                  <span class="arrow-link__text">View All Books</span>
                   <span class="arrow-link__icon">
                     <svg width="75" height="75">
                       <use xlink:href="#link-arrow"></use>
