--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ sitemap: true
 
     <main>
       <div class="row">
-        <section class="creative-hero col-md-4">
+        <section class="single-project col-md-4">
           <div class="creative-hero__container">
             <div class="row">
               <!-- Text Section -->
