--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ sitemap: true
   <div class="row">
     <section class="creative-hero col-md-4">
       <div class="creative-hero__container">
-        <div class="row">
+        <div class="creative-hero__main">
           <!-- Text Section -->
           <div class="col-6" data-aos="fade-right" data-aos-delay="0">
             <div class="services-section__text">
