--- a/index.html
+++ b/index.html
@@ -5,38 +5,36 @@ sitemap: true
 ---
 
 <main>
-  <div class="row">
-    <section class="creative-hero col-md-4">
-      <div class="creative-hero__container container container--size-large">
+  <section class="creative-hero col-md-4">
+    <div class="creative-hero__container container container--size-large">
+      <div class="row">
+        <!-- Text Section -->
+        <div class="col-6" data-aos="fade-right" data-aos-delay="0">
+          <div class="services-section__text">
+            <h2 class="creative-hero__title">
+              <span style="display: inline-block; width: 50%;">OWN</span>
+              <span style="display: inline-block; width: 50%;">THE</span>
+              <span style="display: inline-block; width: 50%;">EDGE</span>
+            </h2>
+          </div>
+        </div>
+        <!-- Image Section -->
+        <div class="col-6">
+          <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" style="max-width: 100%; height: auto;"
+            class="img-fluid" alt="Table Book Logo">
+        </div>
         <div class="row">
-          <!-- Text Section -->
-          <div class="col-6" data-aos="fade-right" data-aos-delay="0">
-            <div class="services-section__text">
-              <h2 class="creative-hero__title">
-                <span style="display: inline-block; width: 50%;">OWN</span>
-                <span style="display: inline-block; width: 50%;">THE</span>
-                <span style="display: inline-block; width: 50%;">EDGE</span>
-              </h2>
-            </div>
-          </div>
-          <!-- Image Section -->
-          <div class="col-6">
-            <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-              style="max-width: 100%; height: auto;" class="img-fluid" alt="Table Book Logo">
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <div class="single-project__hero-text" style="max-width: 100%; text-align: justify;" data-aos="fade-up"
-                data-aos-delay="50">
-                {{ site.description }}
-              </div>
+          <div class="col-12">
+            <div class="single-project__hero-text" style="max-width: 100%; text-align: justify;" data-aos="fade-up"
+              data-aos-delay="50">
+              {{ site.description }}
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <div class="col-md-8" style="height: 1px;"></div>
-  </div>
+    </div>
+  </section>
+  <div class="col-md-8" style="height: 1px;"></div>
   <section class="portfolio-section portfolio-section--no-padding">
     <header class="portfolio-section__header row align-items-end">
       <div class="col-8 col-xl-6 offset-xl-2">
