--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ sitemap: true
 ---
 
 <main>
-  <section class="creative-hero col-md-4">
+  <article class="creative-hero col-md-4">
     <div class="creative-hero__container container container--size-large">
       <div class="row">
         <!-- Text Section -->
@@ -32,8 +32,8 @@ sitemap: true
           </div>
         </div>
       </div>
-    </div>
-  </section>
+
+
   <div class="col-md-8" style="height: 1px;"></div>
   <section class="portfolio-section portfolio-section--no-padding">
     <header class="portfolio-section__header row align-items-end">
@@ -102,4 +102,6 @@ sitemap: true
       </li>
     </ul>
   </section>
+      </div>
+    </article>
 </main>
