--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ sitemap: true
 ---
 
 <main>
-  <article class="creative-hero col-md-4">
+  <article class="creative-hero">
     <div class="creative-hero__container container container--size-large">
-      <div class="row">
+      <div class="row  col-md-4">
         <!-- Text Section -->
         <div class="col-6" data-aos="fade-right" data-aos-delay="0">
           <div class="services-section__text">
@@ -32,9 +32,7 @@ sitemap: true
           </div>
         </div>
       </div>
-
-
-  <div class="col-md-8" style="height: 1px;"></div>
+      <div class="col-md-8" style="height: 1px;"></div>
   <section class="portfolio-section portfolio-section--no-padding">
     <header class="portfolio-section__header row align-items-end">
       <div class="col-8 col-xl-6 offset-xl-2">
