--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ sitemap: true
             class="img-fluid" alt="Table Book Logo">
         </div>
         <div class="row">
-          <div class="col-12" style="padding-right: 0px; padding-left: 0px;">
+          <div class="col-12" style="padding-right: 0px;">
             <div class="single-project__hero-text" style="max-width: 100%; text-align: justify;" data-aos="fade-up"
               data-aos-delay="50">
               {{ site.description }}
