--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ sitemap: true
             <h2 class="portfolio-section__title">Our Books</h2>
           </div>
           <div class="col-4 text-right">
-            <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
+            <a class="portfolio-section__more arrow-link" href="/books/">
               <span class="arrow-link__text">View All Books</span>
               <span class="arrow-link__icon">
                 <svg width="75" height="75">
@@ -52,7 +52,7 @@ sitemap: true
         </header>
         <ul class="portfolio-section__grid __js_portfolio-section-masonry">
           <li class="portfolio-section__item __js_masonry-item">
-            <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
+            <a class="project-preview project-preview--elastic project-preview--vertical" href="/books/american/">
               <span class="project-preview__image">
                 <img src="{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}"
                   alt="American Coffee Table Book">
@@ -68,7 +68,7 @@ sitemap: true
             </a>
           </li>
           <li class="portfolio-section__item __js_masonry-item">
-            <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+            <a class="project-preview project-preview--elastic project-preview" href="/books/bitcoin/">
               <span class="project-preview__image">
                 <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" width="531"
                   height="417" alt="Bitcoin Coffee Table Book">
@@ -84,7 +84,7 @@ sitemap: true
             </a>
           </li>
           <li class="portfolio-section__item __js_masonry-item">
-            <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+            <a class="project-preview project-preview--elastic project-preview" href="/books/sun/">
               <span class="project-preview__image">
                 <img src="{{ '/assets/img/american/american-coffee-table-book-2.jpg' | relative_url }}" width="531"
                   height="417" alt="SUN by D.H. Lawrence">
