--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@ title: TABLE books pro
 sitemap: true
 ---
 
+<style>
+    @media (max-width: 767.98px) {
+      .desktop-padding {
+        padding-top: 100 !important;
+      }
+    }
+  </style>
+
 <main>
-  <article class="creative-hero">
+  <article>
     <div class="creative-hero__container container container--size-large">
       <div class="row d-flex align-items-center col-md-4">
         <!-- Text Section -->
@@ -17,7 +25,7 @@ sitemap: true
               <span style="display: inline-block; width: 50%;">EDGE</span>
             </h2>
           </div> 
-        </div>
+        </div> 
         <!-- Image Section -->
         <div class="col-6">
           <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}" style="max-width: 100%; height: auto;"
