--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ sitemap: true
   </style>
 
 <main>
-  <article>
+  <article class="desktop-padding">
     <div class="creative-hero__container container container--size-large">
       <div class="row d-flex align-items-center col-md-4">
         <!-- Text Section -->
