--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ sitemap: true
 ---
 
 <style>
-    @media (max-width: 767.98px) {
+    @media (min-width: 767.98px) {
       .desktop-padding {
         padding-top: 100px !important;
       }
